old/app/bookinfo/istiovirtualservices.yaml
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: nginx
#spec:
#  hosts:
#  - ingress-nginx-controller 
#  http:
#  - match:
#    - uri:
#        prefix: /page
#    - uri:
#        prefix: /product
#    rewrite:
#      uri: /productpage
#    route:
#    - destination:
#        host: ingress-nginx-controller
#        subset: v1
#...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - productpage.staging.telematicsplatform.tools
  http:
  - match:
    - uri:
        prefix: /page
    - uri:
        prefix: /product
    rewrite:
      uri: /productpage
    route:
    - destination:
        host: productpage
        subset: blue
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: flor
    route:
    - destination:
        host: reviews
        subset: v1
  - route:
    - destination:
        host: reviews
        subset: v2 
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: blue 
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
...
---
